update search history buttons after each search and fix uv index colors

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -27,6 +27,10 @@ header {
     background-color: rgb(219, 99, 18);
 }
 
+.bg-purple {
+    background-color: purple;
+}
+
 #current-uv {
     padding: 1px 10px;
 }
